<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.4</version>
    </parent>

    <groupId>com.oszero</groupId>
    <artifactId>deliver-backend</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>deliver-application</module>
        <module>deliver-web</module>
        <module>deliver-business</module>
        <module>deliver-platform-client</module>
    </modules>

    <properties>
        <project.version>1.0-SNAPSHOT</project.version>
        <!--Maven-->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <!--java 版本-->
        <java.version>17</java.version>
        <java.source.version>17</java.source.version>
        <java.target.version>17</java.target.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <hutool.version>5.8.23</hutool.version>
        <mybatis.plus.version>3.5.4</mybatis.plus.version>
        <druid.version>1.2.16</druid.version>
        <rocketmq.client.java.version>2.2.3</rocketmq.client.java.version>

        <aliyun-sms-sdk-version>2.0.24</aliyun-sms-sdk-version>
        <aliyun-call-sdk-version>1.0.0</aliyun-call-sdk-version>
        <tencentcloud.sdk.version>3.1.915</tencentcloud.sdk.version>
        <easyexcel.version>4.0.3</easyexcel.version>
        <spotless-maven-plugin.version>2.22.1</spotless-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.aliyun</groupId>
                <artifactId>alibabacloud-dysmsapi20170525</artifactId>
                <version>${aliyun-sms-sdk-version}</version>
            </dependency>
            <dependency>
                <groupId>com.aliyun</groupId>
                <artifactId>alibabacloud-dyvmsapi20170525</artifactId>
                <version>${aliyun-call-sdk-version}</version>
            </dependency>
            <dependency>
                <groupId>com.tencentcloudapi</groupId>
                <artifactId>tencentcloud-sdk-java</artifactId>
                <version>${tencentcloud.sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis.plus.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.rocketmq</groupId>
                <artifactId>rocketmq-spring-boot-starter</artifactId>
                <version>${rocketmq.client.java.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>com.diffplug.spotless</groupId>-->
<!--                <artifactId>spotless-maven-plugin</artifactId>-->
<!--                <version>${spotless-maven-plugin.version}</version>-->
<!--                <configuration>-->
<!--                    <java>-->
<!--                        <licenseHeader>-->
<!--                            <file>../format/license-header</file>-->
<!--                        </licenseHeader>-->
<!--                    </java>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <goals>-->
<!--                            <goal>apply</goal>-->
<!--                        </goals>-->
<!--                        <phase>compile</phase>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>
    </build>
</project>